fix layout problem on reduced size search panel

--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -334,6 +334,8 @@ ul { list-style: none;}
 .smallFontSize { font-size: 0.750em }
 
 
+.invisible-table { table-layout: auto; }
+
 .invisible-table, .invisible-table tr {
 	margin: 0;
 	padding: 0;
@@ -1246,7 +1248,7 @@ li:hover .side-action-wrapper .set {color:rgba(155,155,155,1);}
 .action-option:active  { background-color: rgba(0,0,0,0.05); }
 
 .filter-fieldset {
-	min-width: 100%;
+	min-width: 34em /*100%*/;
 }
 
 /* project browser list */
